Changed Corners to GeoJsonPolygon